--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Thamid Islam Portfolio</title>
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>welcome To</h1>
+            <h1><span class="orange-color">Thamid Islam</span> World!</h1>
+            <h3>Build Climber and Train Stopper.</h3>
+            <p>You might saw me juping, climbing bulding and stopping trains.But nobody pays me a dime for that
+                work.That's why i a learning and mastering web development.I will not stop until i becomethe web
+                Development Hero </p>
+            <a class="link-button" target="_blank" href="https://github.com/thamidislam">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/jhankar.png" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
